# quickterm

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.0.1.md  RELEASE_NOTES_v2.0.2.md  RELEASE_NOTES_v2.0.3.md  RELEASE_NOTES_v2.1.0.md  SECURITY.md  THIRD-PARTY-NOTICES.md  plan.md  pyproject.toml  quickterm.spec
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  release.yml
docs/: CONTRACTS.md  MCP_PLAN.md  SECURITY.md
frontend/: viewer.html
frontend/css/: app.css
frontend/js/: api.js  keys.js  launcher.js  layout.js  main.js  palette.js  pane.js  panels.js  workspace.js
packaging/: quickterm.iss
quickterm/: app.py  assets.py  auth.py  config.py  elevation.py  hotkeys.py  mcp_server.py  opener.py  process_usage.py  pty_posix.py  pty_session.py  putty_tools.py  secret_store.py  server.py  session_manager.py  tray.py  update.py  workspace.py
quickterm/frontend/: index.html  viewer.html
quickterm/frontend/css/: app.css  viewer.css
quickterm/frontend/js/: api.js  icons.js  keys.js  launcher.js  layout.js  main.js  palette.js  pane.js  panels.js  themes.js  workspace.js
quickterm/voice/: __init__.py  capture.py  input.py  transcribe.py
scripts/: bench_throughput.py  dev-instance.ps1  fetch_putty.py
tests/: test_assets.py  test_auth.py  test_busy.py  test_close_policy.py  test_coalescing.py  test_config.py  test_elevation.py  test_hotkeys.py  test_mcp_server.py  test_opener.py  test_process_usage.py  test_pty_session.py  test_putty_tools.py  test_secret_store.py  test_server.py  test_session_manager.py  test_update.py  test_version.py  test_workspace.py
