[project]
name = "quickterm"
version = "0.1.0"
description = "Native-feeling terminal host for Windows: ConPTY terminals, split panes, persistent sessions, quick-launch profiles, local voice input."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pywinpty>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
voice = [
    "faster-whisper",
    "sounddevice",
]

[project.scripts]
quickterm = "quickterm.app:main"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
