[project]
name = "quickterm"
version = "2.0.1"
description = "A calm, local terminal workspace with persistent sessions, split panes, profiles, and WSL support."
readme = "README.md"
license = "MIT"
authors = [{ name = "Devin Isaac Worbis" }]
keywords = ["terminal", "workspace", "conpty", "wsl", "pty"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Terminals",
]
requires-python = ">=3.12"
dependencies = [
    "pywinpty>=2.0; sys_platform == 'win32'",
    "pywebview>=6.2.1; sys_platform == 'win32'",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
voice = [
    "faster-whisper",
    "sounddevice",
]

[project.scripts]
quickterm = "quickterm.app:main"

[project.urls]
Homepage = "https://github.com/devincii-io/quickterm"
Repository = "https://github.com/devincii-io/quickterm"
Issues = "https://github.com/devincii-io/quickterm/issues"
Changelog = "https://github.com/devincii-io/quickterm/releases"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pyinstaller>=6.0; sys_platform == 'win32'",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "quickterm"
module-root = ""

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
